fix gaps in slider

--- a/css/products.css
+++ b/css/products.css
@@ -167,7 +167,6 @@
         display: block; /* Show images */
         width: 100%;
         height: auto;
-        border-radius: 5px;
     }
 
     .products-description {
