--- a/css/slider-hero.css
+++ b/css/slider-hero.css
@@ -8,9 +8,13 @@
     font-family: "Open Sans", sans-serif;
 }
 
+.swiperSection{
+    background-color:var(--main-bg-color);
+}
+
 .d-flex {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .align-center {
@@ -33,7 +37,7 @@
 .container {
     max-width: 1300px;
     margin: auto;
-    padding: 50px;
+    padding: 0px;
 }
 
 .swiper {
@@ -72,12 +76,12 @@
 .swiperSection .row{
     max-width: 1300px;
     display: flex;
-    gap: 16px;
+    gap: 10px;
 }
 .swiperSection .gridingBox .preTopBox{
     position: relative;
     border: 5px solid #0063A6;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     min-height: 228px;
     background: url(/images/grid-1.jpg)  no-repeat center center/cover;
 }
@@ -90,9 +94,9 @@
     width: 100%;
     height: 100%;
 }
-.swiperSection .gridingBox .gridBox{
+/* .swiperSection .gridingBox .gridBox{
     gap: 20px !important;
-}
+} */
 .swiperSection .gridingBox .gridBox .grid{
     position: relative;
     border: 5px solid #0063A6;
@@ -208,9 +212,15 @@
     height: 100%;
 }
 }
-@media screen and (max-width: 670px) {
+/* @media screen and (min-width: 670px) {
     .container {
-        padding: 50px 10px;
+        padding:50px 10px;
+    }
+} */
+
+@media screen and (min-width:510px) {
+    .container {
+        padding:0px 10px;
     }
 }
 
